# youtube-comment-analyzer

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.nlp-analyzer.txt  requirements.txt  review_weekly_report.pptx  rewrite_app_sections.py  run_dashboard.bat  streamlit_app.py  streamlit_app_v3.py
.claude/: launch.json
.github/workflows/: tests.yml
.streamlit/: config.toml
_tmp_manual/run-1/: comments_normalized.parquet  videos_normalized.parquet
config/: dashboard_rules.yaml  settings.example.yaml
data/dashboard_cache/: dashboard_bundle_cloud_meta.json  (+1 more)
docs/: dashboard_architecture.md  phase7_benchmark_synthesis.md
scripts/: preview_dashboard.bat  qa_phase67_validation.py  reanalyze.py  run_v5_sample.py  validate_coverage.py  validate_dashboard.py
src/: __init__.py  batch_runner.py  cli.py  config.py  dashboard_app.py  dashboard_rules.py  dashboard_strategy_page.py  dashboard_text_mining_page.py  dashboard_v2.py  dashboard_v3.py  dashboard_v5_page.py  logger.py  main.py
tests/: test_comment_analysis_reason.py  test_comment_truth.py  test_coverage_audit.py  test_dashboard_app.py  test_dashboard_architecture.py  test_dashboard_representative.py  test_dashboard_validation.py  test_keywords.py  test_normalization.py  test_quota_logic.py  test_resolution_point_generator.py  test_similar_comments_unification.py  test_strategy_aggregator.py  test_streamlit_ui_smoke.py  test_text_cleaning.py  test_trends.py  test_v5_blocker_repairs.py  test_v5_pipeline.py  test_video_search_filters.py  test_voc_rules.py  test_youtube_client.py
(+81 files in other folders)
